--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-datetime~=4.3
-httplib2~=0.18.1
-apiclient~=1.0.4
-google-api-python-client~=1.12.3
-telebot~=0.0.2
-oauth2client~=4.1.3
+datetime
+httplib2
+apiclient
+google-api-python-client
+oauth2client
